# metacpan-cpan-extracted

./: .gitignore  README.md
distros/A/Alien-LibJQ/jq/: CMakeLists.txt  Config.cmake.in  builtin.c.patch  dist.info  jq.pc.cmake.in
distros/A/Alien-SmokeQt/: AUTHORS  CMakeLists.txt  ChangeLog  MANIFEST  Makefile.PL  README
distros/A/Alien-SmokeQt/generator/: CMakeLists.txt
distros/A/Authen-PAM/: Changes  MANIFEST  META.yml  Makefile.PL  PAM.pm.in  PAM.xs  PAM_config.h.in  README  configure  configure.ac  pam.cfg.in  test.pl  typemap
distros/A/Authen-PAM/PAM/: FAQ.pod
distros/A/Authen-PAM/d/: PAM.pm
distros/C/CPP-panda-lib/: .hgignore  CMakeLists.txt  CPP-panda-lib.pro  Changes  Lib.xs  MANIFEST  META.json  META.yml  Makefile.PL  Makefile.test  lib.c  lib.xs
distros/C/CPP-panda-lib/.hg/: dirstate  hgrc  last-message.txt  undo.backup.dirstate  undo.desc
distros/C/CPP-panda-lib/misc/: trun.plx
distros/C/CPP-panda-lib/t/: MyTest.pm  bench.cc  cpp_tests.t  dispatcher.cc  error.cc  error.t  excepted.cc  excepted.t  exception.cc  exception.t  from_chars.cc  from_chars.t  function.cc  intrusive_chain.cc  iptr.cc  owning_list.cc  owning_list.t  string.cc  string.t  string.xsi  string_char.cc  string_char.t  string_char16.cc  string_char16.t  string_char32.cc  string_containers.cc  string_containers.t  string_test.h  string_wchar.cc  test.cc  test.h  to_chars.cc  to_chars.t  traits.cc  xs.xs
distros/C/Crypt-Scrypt/src/: Makefile.am  Makefile.in  README.chromium  config.h.in  configure  configure.ac  function_visibility.patch
distros/D/Date/clib/: CMakeLists.txt  README.md  panda-date-config.cmake
distros/D/Device-SerialPort/: Changes  Device-SerialPort.spec  MANIFEST  META.yml  Makefile.PL  README  SerialPort.pm  SerialPort.xs  TODO  config.h.in  configure  configure.ac  modemtest  show-tiocm.c.test
distros/D/Device-SerialPort/t/: 01timing.t  10basic.t  11saved-state.t  20inherited.t  21inherited-state.t
distros/E/Encode-Base2N/clib/: CMakeLists.txt  FetchDeps.cmake  panda-encode-base2n-config.cmake
distros/G/Geo-Location-TimeZoneFinder/shapereader/: AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  Doxyfile  Makefile.PL  Makefile.am  Makefile.in  README.md  byteorder.h  config.h.in  configure  configure.ac  (+37 more)
distros/H/Haineko/: Build.PL  Changes  Haineko.mk  LICENSE  MANIFEST  META.json  META.yml  Makefile.am  README-JA.md  README.md  bootstrap  configure.ac
distros/I/IO-AIO/: AIO.pm  AIO.xs  Changes  MANIFEST  META.json  META.yml  Makefile.PL  README  autogen.sh  config.h.in  configure  configure.ac  def0.h  gendef0  typemap
distros/N/Net-Connection-Sniffer/: Changes  MANIFEST  META.yml  Makefile.PL  README  Sniffer.pm  Sniffer.xs  config.h.in  configure  configure.ac  defaults.h  nc.sniffer.cgi.sample  nc.sniffer.coalesce.cgi.sample  nc.sniffer.dump.pl.sample  nc.sniffer.pl.sample  rc.nc.sniffer.sample  typemap
distros/N/Net-Interface/: Changes  Interface.pm  Interface.xs  MANIFEST  MANIFEST.SKIP  META.yml  Makefile.PL  README  config.h.in  configure  configure.ac  defaults.h  file_definitions  inet_aton.c  localconf.h  miniSocketXS.c  ni_SMI-NUMBERS.c  ni_af_inetcommon.c  ni_fallbackhwaddr.c  ni_fixups.h  ni_funct.h  ni_get_set.c  ni_getifaddrs.c  ni_ifreq.c  ni_in6_classify.c  ni_in6_ifreq.c  ni_lifreq.c  ni_linuxproc.c  ni_malloc.c  ni_memcmp.c  ni_memcmp.h  ni_strlcpy.c  ni_strlcpy.h  ni_util.c  test.pl.developer
distros/P/Panda-Lib/: CMakeLists.txt  CallbackDispatcher.xsi  Changes  Lib.xs  Lib.xs.orig  Logger.xsi  MANIFEST  META.json  META.yml  Makefile.PL  Makefile.PL.orig  NativeCallbackDispatcher.xsi  Panda-Lib.pro  typemap
distros/P/Panda-URI/: CMakeLists.txt  Changes  MANIFEST  META.json  META.yml  Makefile.PL  URI.xs  URI.xsi  cloning.xsi  encode.xsi  schemas.xsi  typemap
distros/P/PerlQt/: AUTHORS  ChangeLog  ChangeLog.CVS  ChangeLog.CVS.delta  INSTALL  Makefile.PL  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  cvs2cl.pl  inst-apps  subdirs  test.pl
distros/Q/Qt/: CMakeLists.txt  CREDITS  Changes  INSTALL  LICENSE  MANIFEST  Makefile.PL  Qt.config  Qt.pm  README  README.QT  TODO  typemap
distros/Q/Qt4/: CMakeLists.txt  INSTALL  MANIFEST  Makefile.PL  README
distros/R/Redland/: ChangeLog  LICENSE.txt  MANIFEST  Makefile.PL  Makefile.am  Makefile.in  NEWS  NEWS.html  README  README.html  RELEASE.html  aclocal.m4  configure  configure.ac  libtool  redland-perl.rdf  redland-perl.rdf.in  redland-perl.spec  redland-perl.spec.in
distros/S/Socket6/: ChangeLog  MANIFEST  META.json  META.yml  Makefile.PL  README  Socket6.xs  aclocal.m4  config.h.in  config.pl.in  configure  configure.in  ftpmirror-1.96.diff  gai.h  gailookup.pl.in  getaddrinfo.c  getnameinfo.c  im-140.diff  inet_ntop.c  inet_pton.c
distros/X/XS-libpanda/: CMakeLists.txt  Changes  MANIFEST  MANIFEST.SKIP  META.json  META.yml  Makefile.PL  Makefile.test
distros/d/dta-tokwrap/: ChangeLog  Common.am  MANIFEST  MANIFEST.SKIP  META.json  META.yml  Makefile.PL  Makefile.am  Makefile.in  README.pod  README.txt  aclocal.m4  configure  configure.ac
distros/h/htpl/: CHANGES  FAQ  HTPL_vs_MERGE.txt  INSTALL  Makefile.PL  Makefile.in  README  aclocal.m4  config-mod.pl  config-srv.pl  configure  configure.in  htpgen.in  htpl-config.pl.in  htpl-crp.pl  htpl-l.c  htpl-parse.c  htpl-perl.c  htpl-pm.code  htpl-sh.h  htpl-sub.c  htpl-win.c  htpl-xsub.pl  htpl.c  htpl.h  htpl.head  htpl.offhead  htpl.sitehead  htplp.in  htplparse.yp  htplsrvc.in  htplss.in  htreporter.in  instnonroot  list.htpl  macros.xpl  macvrt.pl  parse-exp.pl  perf.c  perf.h  (+8 more)
distros/l/libapreq/: BUILD.sh  CREDITS  Changes  INSTALL  INSTALL.MacOSX  MANIFEST  META.yml  Makefile.PL  Makefile.am  Makefile.in  README  STATUS  ToDo  acinclude.m4  aclocal.m4  configure  configure.in  libapreq.pod  mkinstalldirs  typemap
distros/l/libapreq2/: CHANGES  FAQ.pod  INSTALL  MANIFEST  META.yml  Makefile.PL  Makefile.am  Makefile.in  PREREQUISITES  README  STATUS  acinclude.m4  aclocal.m4  apreq2-config.in  buildconf  configure  configure.ac  libapreq.rc
(+973687 files in other folders)
